# hermes-agent-metaharness

./: .gitignore  LICENSE  PRODUCT_SPEC.md  README.md  pyproject.toml
candidates/: README.md  noop_candidate.py  template_candidate.py
configs/: README.md  tblite_ollama_local.yaml  tblite_ollama_qwopus.yaml
meta_harness/: __init__.py  __main__.py  archive_reader.py  baseline.py  benchmark_runner.py  candidate_registry.py  cli.py  comparability.py  comparison.py  config.py  frontier.py  models.py  mutation.py  search.py
tests/: conftest.py  test_archive_reader.py  test_baseline.py  test_benchmark_runner.py  test_candidate_registry.py  test_cli.py  test_comparison.py  test_error_paths.py  test_frontier.py  test_mutation.py  test_search.py
